Bug 28724 - atomic produces type mismatches
Summary: atomic produces type mismatches
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.2.0
: P3 normal
Target Milestone: 4.2.0
Assignee: Jakub Jelinek
URL:
Keywords: openmp
Depends on:
Blocks: 22368
  Show dependency treegraph
 
Reported: 2006-08-14 13:48 UTC by Andrew Pinski
Modified: 2006-08-16 15:32 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2006-08-15 12:07:25


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Pinski 2006-08-14 13:48:42 UTC
/src/gcc/local/gcc/libgomp/testsuite/libgomp.c/atomic-10.c: In function 'f2':^M
/src/gcc/local/gcc/libgomp/testsuite/libgomp.c/atomic-10.c:139: error: statement types mismatch^M
D.1631 = D.1629;^M
^M
unsigned intD.3^M
intD.0^M
/src/gcc/local/gcc/libgomp/testsuite/libgomp.c/atomic-10.c:139: error: statement types mismatch^M
D.1638 = D.1636;^M
^M
unsigned intD.3^M
intD.0^M
---- MANY MORE ----
FAIL: libgomp.c/atomic-10.c (internal compiler error)
FAIL: libgomp.c/atomic-10.c (test for excess errors)
Comment 1 Andrew Pinski 2006-08-14 14:01:13 UTC
A lot more of the libgomp tests failed because of this or PR 28713.
Comment 2 Jakub Jelinek 2006-08-15 12:07:25 UTC
Testing a patch.
Comment 3 Jakub Jelinek 2006-08-15 14:56:40 UTC
Subject: Bug 28724

Author: jakub
Date: Tue Aug 15 14:56:28 2006
New Revision: 116153

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=116153
Log:
	PR middle-end/28724
	* gimplify.c (gimplify_omp_atomic_pipeline): Convert oldival
	to itype in assignment to oldival2.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/gimplify.c

Comment 4 Jakub Jelinek 2006-08-16 10:33:39 UTC
Fixed on the trunk.
Comment 5 Andrew Pinski 2006-08-16 15:32:02 UTC
And verified.