	PR middle-end/28724 	* gimplify.c (gimplify_omp_atomic_pipeline): Convert oldival 	to itype in assignment to oldival2.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116153 138bc75d-0d04-0410-961f-82ee72b054a4